--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -23,7 +23,7 @@ jobs:
       - uses:  actions/checkout@v3.3.0
 
       - name:  List files in the repository
-      - run:  |
+        run:  |
           echo "The repository ${{ github.repository }} contains the following files:"
           tree
         
